<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.lucy.p2pmessagingapp.LoginActivity">


    <EditText
        android:id="@+id/login_numberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_hint"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/login_numberText"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:onClick="Login"
        android:text="@string/login"
        android:layout_below="@id/login_passwordText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Register"
        android:text="@string/registration_hint"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</android.widget.RelativeLayout>