<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lucy.p2pmessagingapp.RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstNameView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:text="@string/first_name_register"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstNameText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lastNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/last_name_register"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastNameText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/number_register"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_numberText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_numberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameText" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/password_register"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_numberText" />

    <TextView
        android:id="@+id/repeatpasswordView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/repeat_password_register"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordView"
        />

    <EditText
        android:id="@+id/repeatpasswordText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="sendRegistrationForm"/>



</android.support.constraint.ConstraintLayout>
